.kube/prod/iman-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: apps
                    operator: In
                    values:
                      - "true"
      imagePullSecrets:
        - name: gitlab-registry
      containers:
      - image: gitlab.udevs.io:5050/iman/iman_frontend:latest
        name: frontend
        imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: frontend
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: frontend-ingress
#  namespace: default 
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/temporal-redirect: https://imaninvest.com
#spec:
#  tls:
#  - hosts:
#      - imaninvest.com
#      - www.imaninvest.com
#      - iman.uz
#    secretName: frontend-tls
#  rules:
#    - host: imaninvest.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: frontend
#                port:
#                  number: 80
#    - host: www.imaninvest.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: frontend
#                port:
#                  number: 80
#    - host: iman.uz 
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: frontend
#                port:
#                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-2-ingress
  namespace: default 
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
      - imaninvest.com
      - www.imaninvest.com
    secretName: frontend-2-tls
  rules:
    - host: imaninvest.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: www.imaninvest.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
